<resources>
    <string name="app_name">LoginRegister</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signuphere">Create a new account? SignUp</string>
    <string name="welcome">Welcome</string>
    <string name="Notelp">Nomor Telepon</string>
    <string name="Alamat">Alamat</string>
    <string name="hf">Home Fragment</string>
    <string name="sf">Search Fragment</string>
    <string name="cf">Cart Fragment</string>
    <string name="pf">Profile Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>